# weightless

./: CMakeLists.txt
.github/instructions/: voxel-sandbox-roadmap.instructions.md
.github/skills/metal-cpp-game-engine/: SKILL.md
Metal_Engine_cpp/: main.cpp
Metal_Engine_cpp.xcodeproj/: project.pbxproj
Metal_Engine_cpp.xcodeproj/xcshareddata/xcschemes/: Metal_Engine_cpp.xcscheme
Metal_Engine_cpp.xcodeproj/xcuserdata/austin.xcuserdatad/xcschemes/: xcschememanagement.plist
Metal_Engine_cpp/src/: config.h  main.cpp
Metal_Engine_cpp/src/backend/: glfw_adapter.h  glfw_adapter.mm  mtlm.cpp  mtlm.h
Metal_Engine_cpp/src/control/: app.cpp  app.h
Metal_Engine_cpp/src/model/: camera.cpp  camera.h
Metal_Engine_cpp/src/shaders/: general.metal  triangle.metal
Metal_Engine_cpp/src/view/: mesh.cpp  mesh.h  mesh_factory.cpp  mesh_factory.h  pipeline_factory.cpp  pipeline_factory.h  renderer.cpp  renderer.h  vertex_formats.cpp  vertex_formats.h
build_cmake_test/: CMakeCache.txt  Makefile  cmake_install.cmake
